# Image-Collection

./: .gitignore  README.md  collection_stats.csv  pyproject.toml  requirements.txt  scrape.py
pipeline/: concurrency.py  config.py  consistency_checker.py  downloader.py  log_manager.py  metadata_writer.py  orchestrator.py  progress_tracker.py  resolution_sorter.py  source_manager.py  state_manager.py  stats_manager.py  validator.py
pipeline/validators/: blur_validators.py  relevance_validators.py  watermark_validators.py
sources/: base_source.py  bing_source.py  europeana_source.py  internetarchive_source.py  nypl_source.py  pexels_source.py  pixabay_source.py  smithsonian_source.py  unsplash_source.py  wikimedia_source.py
state/: hashes.txt
utils/: file_utils.py  image_utils.py  rate_limiter.py  request_handler.py
